syntax = "proto3";
option java_package = "core";

import "model.proto";

message UpdateDatabase {
    AttributesMap attributesMap = 1;
}

message Zones {
    int32 msgID = 1;
}

message ZonesResponse {
    int32 responseID = 1;
    map<string, ZMI> zones = 2;
}
